changed cors configuration